style.css
body{

}

/* .w3-sidebar{
height:100%;
width:200px;
background-color:#fff;
position:fixed!important;
z-index:1;
overflow:auto
} */
.sidebar{
  background-color: #093870;
  color: white;

  position: absolute;
  width: 269px;
  height: 718px;
  left: 0px;
  top: 0px;

}

a {
  color: white;
  text-decoration: none;
}

.home-button{
  position: absolute;
  width: 198px;
  height: 29px;
  left: 102px;
  top: 82px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;

}

.conferences-button{
  position: absolute;
  width: 198px;
  height: 29px;
  left: 102px;
  top: 134px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.calendar-button{
  position: absolute;
  width: 198px;
  height: 29px;
  left: 102px;
  top: 186px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.social-button{
  position: absolute;
  width: 198px;
  height: 29px;
  left: 102px;
  top: 238px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;

}

.service-button{
  position: absolute;
  width: 198px;
  height: 52px;
  left: 102px;
  top: 290px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.officers-button{
  position: absolute;
  width: 198px;
  height: 28px;
  left: 102px;
  top: 365px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.vex-button{
  position: absolute;
  width: 198px;
  height: 28px;
  left: 102px;
  top: 416px;

  font-family: 'Patua One';
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.sidebar-decoration{
  position: absolute;
width: 17px;
height: 718px;
left: 269px;
top: 0px;

background: #E7864B;
}

.title{
  position: absolute;
  width: 832px;
  height: 72px;
  left: 360px;
  top: 52px;

  font-family: 'Rubik Mono One';
  font-style: normal;
  font-weight: 400;
  font-size: 72px;
  line-height: 89px;
  text-align: center;

  color: #ED823E;
}

.subheading{
  position: absolute;
  width: 616px;
  height: 67px;
  left: 450px;
  top: 170px;

  font-family: 'Rubik Mono One';
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 40px;
  text-align: center;

  color: #CB6729;
}

